# Job-Agent

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SPEC.md  README.md  TASKS.md  docker-compose.yml
automation/: README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_resume_system.py  0003_job_analysis.py  0004_matching.py  0005_application_tracker.py  0006_tailored_documents.py  0007_email_messages.py
backend/app/: __init__.py  application_statuses.py  config.py  main.py  resume_tracks.py
backend/app/ai/: __init__.py  base.py  deps.py  exceptions.py
backend/app/ai/prompts/: __init__.py  email.py  job_analysis.py  tailoring.py
backend/app/ai/providers/: __init__.py  ollama.py
backend/app/api/routes/: ai.py  applications.py  dashboard.py  emails.py  health.py  jobs.py  profile.py  resumes.py  tailoring.py
backend/app/database/: __init__.py  session.py
backend/app/email/: __init__.py  base.py  deps.py
backend/app/email/providers/: __init__.py  gmail.py  mock.py
backend/app/models/: __init__.py  application.py  base.py  candidate_profile.py  email_message.py  job.py  job_analysis.py  job_match.py  resume.py  tailored_document.py
backend/app/schemas/: ai.py  application.py  dashboard.py  email.py  health.py  job_analysis.py  matching.py  resume.py  tailoring.py
backend/app/services/: __init__.py  dashboard.py  email_classifier.py  job_analysis.py  matching.py  profile.py  resume_parser.py  tailoring.py
backend/tests/: conftest.py  test_ai_provider.py  test_ai_routes.py  test_applications.py  test_dashboard.py  test_emails.py  test_health.py  test_job_analysis.py  test_matching.py  test_models.py  test_resumes.py  test_tailoring.py
docs/: README.md
frontend/: .env.local.example  package-lock.json  (+2 more)
(+22 files in other folders)
