[project]
name = "job-agent-backend"
version = "0.1.0"
description = "Job-Agent backend — FastAPI, local-first AI job search platform"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=5.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
# Install with `uv sync --extra postgres` when moving to Postgres + pgvector.
postgres = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]
# Install with `uv sync --extra gmail` to enable real Gmail (read-only OAuth).
gmail = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "fpdf2>=2.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
